--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -47,9 +47,14 @@ h2 {
     font-size: 3rem;
     margin-bottom: 10px;
 }
+h3 {
+    font-size: 1.5rem;
+    text-align: center;
+    margin: 10px 0 5px 0;
+}
 p {
     line-height: 21.82px;
-    padding: 10px;
+    padding: 0 10px;
 }
 
 img {
@@ -67,7 +72,7 @@ img {
     justify-content: space-between;
     align-items: center;
     flex-wrap: wrap;
-    margin: auto;
+    margin: 0 auto;
     max-width: 960px;
 }
 .c-header__logo {
@@ -96,21 +101,21 @@ nav ul {
 /* 4. Quem somos
 /**********************************/
 
-.section-quem-somos {
-    margin: auto;
+.section-somos {
+    margin: 0 auto;
     max-width: 960px;
 }
-.c-section-quem-somos {
+.c-section-somos {
     display: flex;
     align-items: center;
     flex-wrap: wrap;
 }
-.c-section-quem-somos__paragraph {
+.c-section-somos__paragraph {
     flex-grow: 6;
     flex-shrink: 1; /* permite a redução para 1(volta ao tamanho padrão) */
     flex-basis: 160px; /*tamanho inicial */
 }
-.c-section-quem-somos__img {
+.c-section-somos__img {
     flex-grow: 1;
     flex-shrink: 1;
     flex-basis: 350px;
@@ -118,7 +123,20 @@ nav ul {
 /**********************************/
 /* 5. Nossos cursos
 /**********************************/
+.section-cursos {
+    max-width: 960px;
+    margin: 0 auto;
+}
+.c-section-cursos {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
 
+.curso {
+    width: 280px;
+    margin: 0 20px;
+}
 /**********************************/
 /* 6. Planos
 /**********************************/
