277- alterando o margin top e bottom

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -274,6 +274,7 @@ nav ul {
 @media (max-width: 800px) {
     .vantagem {
         max-width: 220px;
+        margin: 10px auto;
     }
 }
 /**********************************/
