--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -28,10 +28,12 @@
 /**********************************/
 /* 1. Estilos Gerais
 /**********************************/
+html {
+    scroll-behavior: smooth;
+}
 body {
     background: var(--clr-white);
     font-family: var(--ff-primary);
-    /* min-height: 100vh; */
 }
 a {
     color: #000;
@@ -280,7 +282,69 @@ nav ul {
 /**********************************/
 /* 8. Newsletter
 /**********************************/
+.section-newsletter {
+    background: var(--clr-green-light);
+}
+.c-newsletter {
+    display: flex;
+    flex-wrap: wrap;
+    max-width: 960px;
+    margin: 0 auto;
+    padding: 50px 0;
+    text-align: center;
+}
+.newsletter-info {
+    flex: 1 1 260px;
 
+    padding: 0 0 10px 10px;
+}
+.newsletter-info h2 {
+    font-size: 2.62rem;
+    font-weight: 700;
+}
+.newsletter-info p {
+    font-style: italic;
+}
+.newsletter-form {
+    flex: 2 1 260px;
+    display: flex;
+    flex-wrap: wrap;
+}
+.newsletter-form__input {
+    flex: 3 1 260px;
+    font-size: 1.25rem;
+    width: 325px;
+    color: black;
+    font-style: italic;
+    border: 10px solid var(--clr-pink-dark);
+    padding: 10px;
+    margin: 0;
+    border-radius: 0px;
+}
+.newsletter-form__submit {
+    width: 192px;
+    font-size: 2.25rem;
+    font-weight: 700;
+    color: black;
+    text-transform: uppercase;
+    background: var(--clr-pink-dark);
+    cursor: pointer;
+    padding: 15px;
+    border: none;
+}
 /**********************************/
 /* 9. Footer
 /**********************************/
+.footer {
+    background: var(--clr-pink-light);
+}
+.c-footer {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    padding: 55px calc((100% - 960px) / 2);
+}
+.c-footer p,
+c-footer__img {
+    padding: 0 10px 0 10px;
+}
