--- a/assets/css/soft-reset.css
+++ b/assets/css/soft-reset.css
@@ -10,6 +10,11 @@ ul {
     list-style: none;
 }
 
-a {
+a,
+a:hover,
+a:active,
+a:link,
+a:visited {
     text-decoration: none;
+    color: black;
 }
