--- a/assets/css/reset.css
+++ b/assets/css/reset.css
@@ -4,17 +4,18 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-}
-ol,
-ul {
+    border: none;
     list-style: none;
+    text-decoration: none;
 }
-
+img {
+    display: block;
+    max-width: 100%; /*evita que ultrapsse o tamanho do pai, deixa responsivo */
+}
 a,
 a:hover,
 a:active,
 a:link,
 a:visited {
-    text-decoration: none;
     color: black;
 }
